[gd_scene load_steps=5 format=3 uid="uid://wlu1bsf6ytrg"]

[ext_resource type="Script" path="res://scenes/constructs/construct.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/effects/FadeToBlack.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://2fv0unh37xay" path="res://scenes/loading/loading_scene.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://1jvdile6kpy3" path="res://scenes/settings/settings.tscn" id="4"]

[node name="construct" type="Node3D"]
script = ExtResource("1")

[node name="FadeToBlack" parent="." instance=ExtResource("2")]
is_faded = true

[node name="Player" type="Node3D" parent="."]

[node name="Loading_scene" parent="." instance=ExtResource("3")]

[node name="World_scene" type="Node3D" parent="."]

[node name="Settings" parent="." instance=ExtResource("4")]
visible = false
